# compacts

./: .gitignore  CHANGELOG.md  Setup.hs  compacts.cabal
src/Codec/: Delta.hs  Gamma.hs  Rice.hs  Simple9.hs  Unary.hs  VarByte.hs
src/Data/: BitArray.hs  BitVector.hs  CompactArray.hs  SubWord.hs
src/Data/BitArray/: Builder.hs
src/Data/BitVector/: HighOrder.hs  ZeroOrder.hs
src/Data/Bits/: Reverse.hs
src/Data/CompactArray/: Dense.hs  Sampled.hs
tests/: doctests.hs
