name: compacts
version: 0.0.0
synopsis: Compact data structures and compression codecs
-- description:
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: maoe@foldr.in
copyright: Copyright (C) 2017 Mitsutoshi Aoe
category: Data
build-type: Custom
extra-source-files: CHANGELOG.md
cabal-version: >= 1.24

custom-setup
 setup-depends:
    base >= 4 && < 5
  , Cabal
  , cabal-doctest >= 1 && < 1.1

library
  exposed-modules:
    Codec.Delta
    Codec.Gamma
    Codec.Rice
    Codec.Simple9
    Codec.Unary
    Codec.VarByte
    Data.BitArray
    Data.BitArray.Builder
    Data.BitVector
    Data.BitVector.HighOrder
    Data.BitVector.ZeroOrder
    Data.CompactArray
    Data.CompactArray.Dense
    Data.CompactArray.Sampled
    Data.SubWord
  other-modules:
    Data.Bits.Reverse
  build-depends:
      base >= 4.9 && < 4.11
    , bytestring
    , primitive
    , tagged
    , vector
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
      base
    , doctest >= 0.11.1 && < 0.12
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
  other-modules: Build_doctests
  autogen-modules: Build_doctests
  default-language: Haskell2010

benchmark bench-compact-arrays
  type: exitcode-stdio-1.0
  main-is: bench-compact-arrays.hs
  build-depends:
      base
    , compacts
    , criterion
  ghc-options: -Wall
  hs-source-dirs: benchmarks
  default-language: Haskell2010
